# autohdr

./: .gitignore  Cargo.toml  LICENSE  README.md  VkLayer_hdr_tensor.json  com.github.autohdr.gui.desktop  hdr_transform.comp  hdr_transform.spv  install.sh  layer.json.in  meson.build  shader.comp  shader.rs  shader.spv  shader_hex.txt  shader_u32.txt
autohdr-gui/: Cargo.toml
autohdr-gui/src/: main.rs
src/: lib.rs  shader.rs  shader.rs.tmp
