[package]
name = "vk_layer_hdr_tensor"
version = "0.1.0"
edition = "2021"

[lib]
name = "VkLayer_hdr_tensor"
crate-type = ["cdylib"]

[dependencies]
# Ash to najpopularniejszy crate do Vulkana w Ryscie, oferujący "unsafe" bindy bliskie C.
ash = "0.37.2"
lazy_static = "1.4.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
